src/test/test-models/bad/op_addition_bad.stan
parameters {
  matrix[3,3] a;
  vector[3] b;
}
model {
  matrix[3,3] c;
  c <- a + b;
}
